# python-semaphore-client-cli

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
semaphore_client_cli/: __init__.py  cli.py  config.py  constants.py  cookies.py  ping.py
tests/: __init__.py  test_cli.py
